Mt 169 fix spacing arround h1 (#53)
* Fix spacing around h1
- add the space to main to separate between breadcrumbs and main content.

* Fix spacing around h1
- add more space between h1 and stepper

Relates to MT-168

--- a/src/scss/components/_multipage-form.scss
+++ b/src/scss/components/_multipage-form.scss
@@ -3,6 +3,10 @@
   &.layout-flex-col {
     gap: 0;
 
+    .steps {
+      margin-top: var(--spacer-small);
+    }
+
     > * + * {
       margin-top: var(--content-spacer);
     }
